<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbackground"
    android:layoutDirection="ltr"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#c3493a"
            android:layout_gravity="center_horizontal"
            android:text="@string/login" />

        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:weightSum="4"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutphone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="4"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextphone"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:hint="@string/hint_phone"
                    android:inputType="number"
                    android:background="@null"
                    android:maxLines="1"
                    android:textColor="#000000" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:background="@drawable/shape"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:background="@null"
                android:textColor="#000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButtonLogin"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"

            android:textColor="#ffffff"
            android:background="@drawable/shapelogin"
            android:text="@string/text_login" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/textViewLinkRegister"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="#ffffff"
            android:background="@drawable/shaperegester"
            android:text="@string/text_register" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="#ffffff"
            android:background="@drawable/shape2"
            android:text="@string/face"  />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/textViewLinkguest"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="#000000"
            android:background="@drawable/shapeguest"
            android:text="@string/guest" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>