<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:paddingRight="15dp"
    android:paddingLeft="15dp"
    android:background="@drawable/splash"
   >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"

            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:textColor="#c3493a"
            android:layout_gravity="center_horizontal"
            android:text="@string/text_register"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutName"
            android:background="@drawable/shape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextName"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:hint="@string/hint_name"
                android:inputType="text"
                android:background="@null"
                android:maxLines="1"
                android:textColor="@color/colorAccent" />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:weightSum="4"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutphone"
                android:background="@drawable/shape"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextphone"
                    android:layout_width="match_parent"
                    android:background="@null"
                    android:layout_height="30dp"
                    android:hint="@string/hint_phone"

                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="@color/colorAccent" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutaddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextaddress"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:hint="@string/address"
                android:background="@null"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/colorAccent" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:background="@drawable/shape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:background="@null"
                android:maxLines="1"
                android:textColor="@color/colorAccent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:hint="@string/hint_confirm_password"
                android:inputType="textPassword"
                android:background="@null"
                android:maxLines="1"
                android:textColor="@color/colorAccent" />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButtonRegister"
            android:background="@drawable/shapelogin"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"

            android:textColor="#ffffff"
            android:text="@string/text_register" />

        <!--<androidx.appcompat.widget.AppCompatButton-->
            <!--android:id="@+id/appCompatButtonFace"-->
            <!--android:background="@drawable/shape2"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_gravity="center"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="10dp"-->

            <!--android:textColor="#ffffff"-->
            <!--android:text="@string/face" />-->
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>