<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:background="#ffffff"
    >
    <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:local="http://schemas.android.com/apk/res-auto"
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/colorPrimaryDark"
        local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        local:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="@string/app_name"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title" />

    </androidx.appcompat.widget.Toolbar>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/e"
        android:layout_below="@id/app_bar"
        android:layout_height="50dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="8"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:textColor="#ffffff"
                android:gravity="center"
                android:textSize="17dp"
                android:text="@string/Region"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_marginLeft="5dp"
                android:textSize="15dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/search"

                android:background="@drawable/rounded_edittext"
                />
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:id="@+id/search_button"
                android:text="@string/search"
                android:textColor="#000000"
                />
        </LinearLayout>
    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:scrollbars="vertical"
        android:id="@+id/recyclerview"
        android:layout_below="@+id/e"
        >

    </androidx.recyclerview.widget.RecyclerView>
    <ProgressBar
        android:id="@+id/progressBar_subject"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="false"
        android:visibility="visible" />



</RelativeLayout>