<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    tools:context=".Activity.WhoUs">

    <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:local="http://schemas.android.com/apk/res-auto"
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/colorPrimaryDark"
        local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        local:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="@string/fatoura"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title" />

    </androidx.appcompat.widget.Toolbar>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:background="@drawable/sss"
        android:layout_below="@+id/app_bar"
        >
        <LinearLayout
            android:layout_width="match_parent"

            android:layout_margin="15dp"
            android:id="@+id/num_kilo"
          android:background="@drawable/shapelogin"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:layout_height="wrap_content"
                android:text="@string/name"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:editable="false"
                android:id="@+id/name"
                android:textColor="#000000"
                android:gravity="center"
                android:layout_marginLeft="3dp"
                android:background="@drawable/rounded_edittext"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/shapelogin"
            android:id="@+id/total_view"
            android:layout_below="@id/num_kilo"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:text="@string/address"
                android:textSize="20dp"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:id="@+id/address"
                android:gravity="center"

                android:maxLines="3"
                android:textColor="#000000"
                android:layout_marginRight="5dp"
                android:background="@drawable/rounded_edittext"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/shapelogin"
            android:id="@+id/phonee"
            android:layout_below="@id/total_view"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:text="@string/phone"
                android:textSize="20dp"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:id="@+id/phone"
                android:editable="false"
                android:gravity="center"
                android:inputType="phone"
                android:textColor="#000000"
                android:layout_marginRight="5dp"
                android:background="@drawable/rounded_edittext"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/shapelogin"
            android:visibility="gone"
            android:id="@+id/phoneee"
            android:layout_below="@id/phonee"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:text="طريقة الشحن :"
                android:textSize="20dp"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:id="@+id/charge"
                android:editable="false"
                android:gravity="center"
                android:inputType="phone"
                android:textColor="#000000"
                android:layout_marginRight="5dp"
                android:background="@drawable/rounded_edittext"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/shapelogin"
            android:id="@+id/pho"
            android:layout_below="@id/phoneee"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:text="@string/allmoney"
                android:textSize="20dp"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:id="@+id/price"
                android:editable="false"
                android:gravity="center"
                android:inputType="phone"
                android:textColor="#000000"
                android:layout_marginRight="5dp"
                android:background="@drawable/rounded_edittext"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pho"
            android:scrollbars="vertical"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:background="@drawable/shapeguest"
            android:textColor="#000000"
            android:id="@+id/details"
            >

        </TextView>

        <Button
            android:id="@+id/cunti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="75dp"
            android:background="@drawable/shaperegester"
            android:text="@string/receve"
            android:textColor="#ffffff"
            android:textStyle="bold" />







    </RelativeLayout>
</RelativeLayout>